[workspace]
members = ["datazoo", "dz_bitflags", "dz_bitflags_macros"]
resolver = "2"

[workspace.package]
authors = ["Nicola Papale"]
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/nicopap/datazoo"

[workspace.dependencies]
arbitrary-int = "1.2.6"
proc-macro2 = "1.0.66"
quote = "1.0.32"
sorted-iter = "0.1.11"
syn = { version = "2.0.28", default-features = false, features = ["full", "parsing", "proc-macro", "printing", "clone-impls"] }
thiserror = "1.0.44"
