[package]
name = "datazoo"
authors = ["Nicola Papale"]
description = "Bitset and jagged array data structures"
license = "MIT OR Apache-2.0 OR Zlib"
readme = "README.md"
keywords = ["multimap", "bitset", "jagged-array", "variable-length", "packed"]
categories = ["data-structures"]
repository = "https://github.com/nicopap/datazoo"
version = "0.7.0"
edition = "2021"

[features]
default = ["enumset"]

[dependencies]
enumset = { version = "1.1", features = ["std"], optional = true }
sorted-iter = "0.1.11"
thiserror = "1.0.50"
smallvec = { version = "1.11.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
