[package]
name = "dz_bitflags_macros"
description = "Proc macros for the dz_bitflags crate"
keywords = ["bitflags", "packing", "enum"]
categories = ["data-structures", "encoding"]
readme = "README.md"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

